<resources>
    <string name="app_name">Food Service</string>
    <string name="default_app_name">Online Food Ordering &amp; Delivery System</string>
    <string name="app_desc"><i>Delicious meals served everyday…</i></string>
    <string name="get_started">Get started</string>
    <string name="welcome_desc">Login to start shopping for your favorite dishes</string>
    <string name="password_recover_title">Recover your password</string>
    <string name="password_recover_desc">We will send you an email to reset your password</string>
    <string name="close_drawer">close_drawer</string>
    <string name="open_drawer">open_drawer</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="details">Food details</string>
    <string name="lorem">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
        similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem
        rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
        impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
        Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint
        et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores
        alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="add_more">Add</string>
    <string name="proceed_to_payment">Pay Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_tracking">Map</string>
    <string name="loc_permission">In order to start tracking your purchase, you need to enable permission to use your location</string>
    <string name="formatted_total_amount">Total  <b>GHC %.2f</b></string>
    <string name="receipt">Your Receipt</string>
    <string name="checkout">Checkout</string>
    <string name="deliver_to">Deliver to</string>
    <string name="change">Change</string>
    <string name="momo">MTN Mobile Money</string>
    <string name="confirm_trans_hint">Payment Provider</string>
    <string name="computation">Transaction Breakdown</string>
    <string name="savings">Savings</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="tax">Tax</string>
    <string name="grand_total">Grand Total</string>
    <string name="visa">Credit  / Debit Card</string>
    <string name="van_details">Delivery Van Info</string>
</resources>
